--- a/public/output.css
+++ b/public/output.css
@@ -1520,6 +1520,11 @@ video {
     padding-bottom: 6rem;
   }
 
+  .md\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
   .md\:text-8xl {
     font-size: 6rem;
     line-height: 1;
